--- a/src/Assignment-5/assignment5.css
+++ b/src/Assignment-5/assignment5.css
@@ -4,4 +4,40 @@
 .container, .content {
 width: 100%;
 height: 100%;
+background-color: #D3D3D3;
+}
+.outer{
+    background-color: grey;
+}
+
+.card{
+    text-align: center;
+    display: flex;
+    width: 50vw;
+    height: 300px;
+    margin: 50px 20px 40px 20px;
+
+}
+.card .first{
+    background-color: #6CBB3C;
+    height: 300px;
+    margin-bottom: 400px;
+}
+.card .first img{
+    width: 400px;
+    height: 350px;
+    margin-bottom: 200px;
+}
+.card .second{
+    padding: 30px;
+    background-color: white;
+    height: 250px;
+    margin-bottom: 400px;
+}
+.card .second button{
+    background-color: #6CBB3C;
+    margin-top: 10px;
+    border-radius: 25px;
+    height: 50px;
+    width: 150px;
 }
